Assert failure in brush projection code #54270

Closed
opened 2018-03-08 12:16:13 +01:00 by Sergey Sharybin · 8 comments

System Information

Linux Debian, 64bit, GTX1080

Blender Version

Broken: latest master ecab7be, debug builds
Worked: no idea

Short description of error

Assert failure happens in in brush projection. Quite hard to reproduce, so .blend file saved from gdb is attached :)

Exact steps for others to reproduce the error

Assert failure happens with the following stacktarce

P632: (An Untitled Masterwork)

#0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
#1  0x00007ffff009b231 in __GI_abort () at abort.c:79
#2  0x00005555594a539d in project_brush_radius (vc=0x7fffffffce80, radius=0.159267679, location=0x7fffffffce40)
    at /home/sergey/src/blender/blender/source/blender/editors/sculpt_paint/paint_cursor.c:540
#3  0x00005555594a57b2 in sculpt_get_brush_geometry (C=0x60b000004458, vc=0x7fffffffce80, x=478, y=367, pixel_radius=0x7fffffffcdc0, 
    location=0x7fffffffce40, ups=0x61900003f028)
    at /home/sergey/src/blender/blender/source/blender/editors/sculpt_paint/paint_cursor.c:572
#4  0x00005555594ab781 in paint_draw_cursor (C=0x60b000004458, x=478, y=367, UNUSED_unused=0x0)
    at /home/sergey/src/blender/blender/source/blender/editors/sculpt_paint/paint_cursor.c:1053
#5  0x0000555558484b74 in wm_paintcursor_draw (C=0x60b000004458, ar=0x614000031e48)
    at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:107
#6  0x00005555584880bc in wm_method_draw_triple (C=0x60b000004458, win=0x6120000de1c8)
    at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:636
#7  0x000055555848a2e0 in wm_draw_update (C=0x60b000004458)
    at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:999
#8  0x0000555558479718 in WM_main (C=0x60b000004458) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm.c:522
#9  0x000055555846f0ca in main (argc=1, argv=0x7fffffffd338) at /home/sergey/src/blender/blender/source/creator/creator.c:527

Here is a demo file untitled_crash.blend. Just over the mouse in the viewport.

P.S. File is saved from gdb, and still has operator running. This might be another problem.

**System Information** Linux Debian, 64bit, GTX1080 **Blender Version** Broken: latest master ecab7be, debug builds Worked: no idea **Short description of error** Assert failure happens in in brush projection. Quite hard to reproduce, so .blend file saved from gdb is attached :) **Exact steps for others to reproduce the error** Assert failure happens with the following stacktarce [P632: (An Untitled Masterwork)](https://archive.blender.org/developer/P632.txt) ``` #0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51 #1 0x00007ffff009b231 in __GI_abort () at abort.c:79 #2 0x00005555594a539d in project_brush_radius (vc=0x7fffffffce80, radius=0.159267679, location=0x7fffffffce40) at /home/sergey/src/blender/blender/source/blender/editors/sculpt_paint/paint_cursor.c:540 #3 0x00005555594a57b2 in sculpt_get_brush_geometry (C=0x60b000004458, vc=0x7fffffffce80, x=478, y=367, pixel_radius=0x7fffffffcdc0, location=0x7fffffffce40, ups=0x61900003f028) at /home/sergey/src/blender/blender/source/blender/editors/sculpt_paint/paint_cursor.c:572 #4 0x00005555594ab781 in paint_draw_cursor (C=0x60b000004458, x=478, y=367, UNUSED_unused=0x0) at /home/sergey/src/blender/blender/source/blender/editors/sculpt_paint/paint_cursor.c:1053 #5 0x0000555558484b74 in wm_paintcursor_draw (C=0x60b000004458, ar=0x614000031e48) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:107 #6 0x00005555584880bc in wm_method_draw_triple (C=0x60b000004458, win=0x6120000de1c8) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:636 #7 0x000055555848a2e0 in wm_draw_update (C=0x60b000004458) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:999 #8 0x0000555558479718 in WM_main (C=0x60b000004458) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm.c:522 #9 0x000055555846f0ca in main (argc=1, argv=0x7fffffffd338) at /home/sergey/src/blender/blender/source/creator/creator.c:527 ``` Here is a demo file [untitled_crash.blend](https://archive.blender.org/developer/F2430979/untitled_crash.blend). Just over the mouse in the viewport. P.S. File is saved from gdb, and still has operator running. This might be another problem.
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2018-03-08 12:16:59 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Owner

@ideasman42, you have better idea of cases when assert is really needed.

@ideasman42, you have better idea of cases when assert is really needed.
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:36:17 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

In this file scene->toolsettings->unified_paint_settings.last_location is {-nan, 4.592e-41 # DEN, -nan}.
This cause ED_view3d_project_float_global to fail resulting in the assert.

If I'm not mistaken, the value of last_location is obtained when reading the file.

In this file `scene->toolsettings->unified_paint_settings.last_location` is `{-nan, 4.592e-41 # DEN, -nan}`. This cause `ED_view3d_project_float_global` to fail resulting in the assert. If I'm not mistaken, the value of `last_location` is obtained when reading the file.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-02-19 19:03:39 +01:00

This issue was referenced by f642aaf12f

This issue was referenced by f642aaf12fbb3701dd36178cd168ca9e74339c1c

This issue was referenced by 2df040ed58

This issue was referenced by 2df040ed58fb9e80ae69f50262bb702f50f0d71f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54270
No description provided.